--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
+    "mongoose": "^7.3.4",
     "next": "13.4.10",
     "react": "18.2.0",
     "react-dom": "18.2.0"
